--- a/src/main/sass/_landing.scss
+++ b/src/main/sass/_landing.scss
@@ -205,11 +205,11 @@
         }
     }
 
-    #indexpage {
+    #mainsection {
         background-color: #ffffff;
         padding: 100px 0;
 
-        .indexpage-content {
+        .mainsection-content {
             width: 960px;
             margin: 0 auto;
 
@@ -430,10 +430,10 @@
             }
         }
 
-        #indexpage {
+        #mainsection {
             padding: 30px 0;
 
-            .indexpage-content {
+            .mainsection-content {
                 width: 100%;
             }
         }
