--- a/src/main/webapp/contracts/omega-layout/css/layout.css
+++ b/src/main/webapp/contracts/omega-layout/css/layout.css
@@ -2886,21 +2886,21 @@ h2 {
 .landing-wrapper #mobile .mobile-content .ui-button .ui-button-text {
   padding: 1em 5em;
 }
-.landing-wrapper #indexpage {
+.landing-wrapper #mainsection {
   background-color: #ffffff;
   padding: 100px 0;
 }
-.landing-wrapper #indexpage .indexpage-content {
+.landing-wrapper #mainsection .mainsection-content {
   width: 960px;
   margin: 0 auto;
 }
-.landing-wrapper #indexpage .indexpage-content .ui-g {
+.landing-wrapper #mainsection .mainsection-content .ui-g {
   margin-top: 50px;
 }
-.landing-wrapper #indexpage .indexpage-content p {
+.landing-wrapper #mainsection .mainsection-content p {
   color: #a4a4a4;
 }
-.landing-wrapper #indexpage .indexpage-content > p {
+.landing-wrapper #mainsection .mainsection-content > p {
   font-size: 20px;
 }
 .landing-wrapper #video {
@@ -3071,10 +3071,10 @@ h2 {
     width: 250px;
     margin: 0 auto;
   }
-  .landing-wrapper #indexpage {
+  .landing-wrapper #mainsection {
     padding: 30px 0;
   }
-  .landing-wrapper #indexpage .indexpage-content {
+  .landing-wrapper #mainsection .mainsection-content {
     width: 100%;
   }
   .landing-wrapper #video {
